--- a/adding-data.tex
+++ b/adding-data.tex
@@ -34,7 +34,7 @@ For the increase of the  norm of the interpolant when the set of data sites grow
 \theorem
 Let~$f$ be a function in the native space~$\Cal N_Φ$ of a symmetric positive definite kernel~$Φ:\Omega\times\Omega\to\R$.  If $X\subset\Omega$ is a set of locations and~$x\in\Omega$ is a point {\em not}  belonging to~$X$, then the norm of the interpolant~$s_{X\cup\{x\},f}\in\Cal S_{Φ, X\cup\{x\}}$ of~$f$ on the extended set of locations~$X\cup\{x\}$ is related to the norm of the interpolant~$s_{X, f}\in\Cal S_{Φ, X}$ of~$f$ on~$X$ by the expression
 $$
-\norm{s_{X\cup\{x\}, f}}_Φ^2 = \norm{s_{X, f}}_Φ^2 + {(f(x) - s_{X, f}(x))^2\over P^2_X(x)},
+\norm{s_{X\cup\{x\}, f}}_Φ^2 = \norm{s_{X, f}}_Φ^2 + {(f(x) - s_{X, f}(x))^2\over P^2_X(x)}, \eqmark[incrementformula]
 $$
 where $P_X$ is the power function associated to~$X$.
 
