--- a/error-estimates.tex
+++ b/error-estimates.tex
@@ -145,7 +145,7 @@ $$
 
  
  
- An immediate consequence of the definition of the power function that we gave in terms of the error functional (definition~\ref[powerdef]) is the following result.
+ An immediate consequence of the definition of the power function that we gave in terms of the error functional (Definition~\ref[powerdef]) is the following result.
 
 \label[errorestimate]
 \preskip
