--- a/positive-definite-functions.tex
+++ b/positive-definite-functions.tex
@@ -110,7 +110,7 @@ $(-1)^h \psi^{(h)}$ is non-negative, non-increasing and convex for~$h=0,1,2,\dot
 \postskip
 
 \noindent
-In particular, if $\psi:[0,\infty)\to\R$ is continuous on~$[0,\infty)$, it is $k$-times differentiable on~$(0,\infty)$ and has derivatives with alternating signs like in definition~\ref[monotonedef], then it is $k$-times monotone. So, in terms of this definition, a completely monotone function turns out to be a function which is $k$-times monotone for each~$k$.  In analogy to the case of completely monotone functions, there is also a relationship between $k$-times monotone functions and positive definite radial functions (Wendland~\cite[wendland_2004], Fasshauer~\cite[fasshauer_2007]).
+In particular, if $\psi:[0,\infty)\to\R$ is continuous on~$[0,\infty)$, it is $k$-times differentiable on~$(0,\infty)$ and has derivatives with alternating signs like in Definition~\ref[monotonedef], then it is $k$-times monotone. So, in terms of this definition, a completely monotone function turns out to be a function which is $k$-times monotone for each~$k$.  In analogy to the case of completely monotone functions, there is also a relationship between $k$-times monotone functions and positive definite radial functions (Wendland~\cite[wendland_2004], Fasshauer~\cite[fasshauer_2007]).
 
 \preskip
 \theorem
