--- a/thesis.tex
+++ b/thesis.tex
@@ -45,6 +45,7 @@
 \nonum\chap Introduction
 \egroup
 
+%\comment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chap Kernel-based interpolation
 
@@ -67,6 +68,7 @@
 \sec[addingsec] Adding data
 \input adding-data
 
+%\endcomment
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\chap Dealing with discontinuities
 \chap Data classification
