--- a/building-a-regularity-classifier.tex
+++ b/building-a-regularity-classifier.tex
@@ -22,7 +22,7 @@ $$
 $$
 which collects together all the quantities~$U_k$ that have just been defined.  This vector is closely related to the leave-one-out {\em cross-validation} (LOOCV) vector
 $$
-\Bm E\coloneq (\range E_N/),
+\Bm E\coloneq (\range E_N/), \eqmark[vectorE]
 $$
 whose elements are defined as~$E_k\coloneq f(x_k)-s^{(k)\!}(x_k)$, and which is typically used to find the appropriate shape parameter~$ε$ for the interpolation with  a positive definite radial function~$\phi_ε$, defined as in~\ref[phiepsilon]. The value of~$ε$ is chosen such that the $p$-norm
 $$
@@ -34,9 +34,10 @@ of the $ε$-dependent vector~$\Bm E$ is minimised, with $p$ usually being either
 
 The cross-validation vector~$\Bm E$ wouldn't be of much practical utility if there weren't an efficient way to compute it.  Even if apparently its computation requires to find the $N$ interpolants~$\{s^{(k)}\}_{k\in\{1,2,\dots, N\}}$, and hence to invert $N$~matrices of size~$(N-1)\times (N-1)$, Rippa~\cite[rippa_1999] recognised that there is actually an efficient way to compute~$\Bm E$ by inverting only one matrix of size~$N\times N$, namely the interpolation matrix~$\Bm A$ associated to the full set~$X$ of data sites.  By following an analogous reasoning, we can show that also the vector~$\Bm U$ can be computed in an efficient way. But first we need to report the computations made in~\cite[rippa_1999]. 
 
+\label[rippatheo]
 \preskip
 \theorem
-Let $X=\{\range x_N/\}\subset\Omega\subseteq\R^d$ be a set of data sites, $\phi:[0,\infty)\to\R$ a radial kernel which is positive definite on~$\R^d$, and
+Let $X=\{\range x_N/\}\subset\Omega\subseteq\R^d$ be a set of data sites, $\phi:[0,\infty)\to\R$ a radial function which is positive definite on~$\R^d$, and
 $$
 \Bm f\coloneq (\range f_N/)^T = (f(x_1), f(x_2),\dots f(x_N))^T
 $$
@@ -45,7 +46,7 @@ Then the elements~$E_k=f_k-s^{(k)\!}(x_k)$ of the cross-validation vector~$\Bm E
 $$
 E_k = {α_k\over C_{k,k}},
 $$
-where $\Bm C$ is the inverse of the interpolation matrix~$\Bm A=\Bm A_{\phi,X}$ associated to the kernel~$\phi$ and the set~$X$ of locations, and $\Bm α$ is the vector of coefficients of the unique function~$s\in\Cal S_{\phi,X}$ that interpolates $f$ on~$X$, that is the solution of the linear sistem~$\Bm{Aα} = \Bm f$. 
+where $\Bm C$ is the inverse of the interpolation matrix~$\Bm A=\Bm A_{\phi,X}$ associated to the function~$\phi$ and the set~$X$ of locations, and $\Bm α$ is the vector of coefficients of the unique function~$s\in\Cal S_{\phi,X}$ that interpolates $f$ on~$X$, that is the solution of the linear sistem~$\Bm{Aα} = \Bm f$. 
 \proof
 For each point~$x\in\Omega$ let $\Bm t(x)$ be the evaluation at~$x$ of the vector of kernel translates centred at the points of~$X$, that we already defined in~\ref[uandt], namely
 $$
@@ -163,7 +164,7 @@ This ratio of course has no meaning when~$\norm s_\phi = 0$.  But in this case i
 \label[Qdef]
 \preskip
 \definition
-Given a set~$X = \{\range x_N/\}\subset\Omega\subseteq\R^d$ of data sites, with $N ≥ 2$, a set $F = \{\range f_N/\}$ of function values, and a radial kernel~$\phi$ which is positive definite on~$\R^d$, we define the {\em $\phi$-regularity vector}
+Given a set~$X = \{\range x_N/\}\subset\Omega\subseteq\R^d$ of data sites, with $N ≥ 2$, a set $F = \{\range f_N/\}$ of function values, and a radial function~$\phi$ which is positive definite on~$\R^d$, we define the {\em $\phi$-regularity vector}
 $$
 \Bm Q\coloneq (\range Q_N/)
 $$
@@ -177,9 +178,10 @@ $$
 %be able to tell whether a sample comes from a regular function or not
 The goal stated at the beginning of this section---to assess the regularity of a function just by looking at a sample of it---can now be achieved.  In fact, it seems like there is enough information stored in the vector~$\Bm Q$ about the regularity of the sample from which it is computed. It is reasonable to define a regularity classifier as a function of it.
 
+\label[classifierdef]
 \preskip
 \definition
-If $X$, $F$, $\phi$ and~$\Bm Q$ are like in definition~\ref[Qdef], and if~$\tau$ is a positive real number, we define the {\em $\phi$-regularity classifier}~$\Cal R$ with {\em tolerance~$\tau$} as the function that maps the pair of data~$(X, F)$ to either the value $1$ or~$-1$ in the following way:
+If $X$, $F$, $\phi$ and~$\Bm Q$ are like in Definition~\ref[Qdef], and if~$\tau$ is a positive real number, we define the {\em $\phi$-regularity classifier}~$\Cal R$ with {\em tolerance~$\tau$} as the function that maps the pair of data~$(X, F)$ to either the value $1$ (regular) or~$-1$ (not regular) in the following way:
 $$
 \Cal R(X, F) \coloneq \cases{\!\phantom{-}1 & if $\norm{\Bm Q}_1 ≤ \tau$ \cr
                             \!-1 & if $\norm{\Bm Q}_1 > \tau$,}
