--- a/properties-of-the-classifier.tex
+++ b/properties-of-the-classifier.tex
@@ -11,7 +11,7 @@ G = \{\.\range g_N/\}
   = \{\.γ f_1 + η,\, γ f_2 + η,\, \dots,\, γ f_N + η\}
   \eqcolon γ F + η.
 $$
-If $X$ is fixed, in order to distinguish the interpolant of $(X,F)$ from the interpolant of~$(X, G)$ we'll denote them as $s_{F}$ and~$s_{G\!}$ respectively; the same for the vector~$\Bm Q\,$, which will appear as $\Bm Q_{\.F\!}$ in the first case and~$\Bm Q_{\.G\!}$ in the second case.
+If $X$ is fixed, in order to distinguish the interpolant of $(X,F)$ from the interpolant of~$(X, G)$ we'll denote them as $s_{F}$ and~$s_{G\!}$ respectively; the same for the vector~$\Bm Q\,$, which will appear as $\Bm Q_{\.F\!}$ in the first case and~$\Bm Q_{\.G\!}$ in the second case; and also possibly for any other quantity that changes when $F$ becomes~$G$.
 
 
 The easier case~$η=0$ gets analysed first. The following property is the main reason why, in the first place, we didn't consider the vector~$\Bm U$ as is, but rather switched to its ``normalised'' version~$\Bm Q$.
@@ -57,10 +57,10 @@ We can fix a radius~$r\geq 0$ and view $\phi_ε(r)$ as a function of~$ε$ rather
 $$
 \phi_ε(r) = \phi(εr) = a_{0\!}(r) + a_{1}\!(r)\,ε + a_{2\!}(r)\,ε^2 + a_{3\!}(r)\,ε^3 + \cdots,
 $$
-whose coefficients~$a_{n\!}(r)$ are explicit\fnote{They can actually be computed from the expression of~$\phi$.} functions of~$r$.
+whose coefficients~$a_{n\!}(r)$ are explicit\fnote{They can actually be computed from the expression of~$\phi$. For instance, the first term~$a_{0\!}(r)$ is independent of~$r$ and has value~$\phi(0)$, because $\phi$ is continuous at~$r=0$. The other terms are the derivatives of~$\phi$---the power series of~$\phi$ is indeed its Taylor series.} functions of~$r$.
 With $\Bm R$ being the distance matrix associated to~$X$, that is the $N\times N$~matrix of elements~$R_{i,j}\coloneq \norm{x_i - x_j}$, define for each~$n$ the matrix~$\CA_{\Bm n}$ by applying the function $a_n$ to each element of~$\Bm R$, explicitly
 $$
-(\Cal A_{n})_{i,j}\coloneq a_n(R_{i,j}) = a_n(\norm{x_i - x_j}).
+(\Cal A_{n})_{i,j}\coloneq a_n(R_{i,j}) = a_n(\norm{x_i - x_j}),\rlap{$\qquad i,j\in\{1,2,\dots,N\}$.}
 $$
 Under these definitions, the $ε$-dependent matrix~$\Bm A$ has at the point~$ε=0$ the power series expansion
 $$
@@ -93,7 +93,7 @@ $$
 \lim_{ε\to 0} \Bm Q_{\.G\!} = \lim_{ε\to 0} \Bm Q_{\.F}
 $$
 \proof
-Assume by now that $F$ is not constant (meaning that $f_i\neq f_j$ for at least a pair of indices~$i,j$), so that in particular $s_F$ and~$s_G$ are different from the zero function, and the elements $(Q_F)_k$ and~$(Q_G)_k$ are defined as
+Assume by now that $F$ is not constant (meaning that $f_i\neq f_j$ for at least one pair of indices~$i,j$), so that in particular $s_F$ and~$s_G$ are different from the zero function, and the elements $(Q_F)_k$ and~$(Q_G)_k$ are defined as
 $$
 (Q_F)_k = {(U_F)_k\over\norm{s_F}_\phi^2}
         \buildrel\ref[incrementformula]\over = {(f_k-s_F^{(k)\!}(x_k))^2\over \norm{s_F}_\phi^2\,P_{X^{(k)\!}}^2(x_k)},\qquad
@@ -101,7 +101,7 @@ $$
         \buildrel\ref[incrementformula]\over = {(g_k-s_G^{(k)\!}(x_k))^2\over \norm{s_G}_\phi^2\,P_{X^{(k)\!}}^2(x_k)}.
 $$
 
-The first thing to notice is that both expression share the term~$P_{X^{(k)\!}}^2(x_k)$, because we are keeping the data sites~$X$ fixed and are changing only the data values from $F$ to~$G$.  At the numerator we have the elements of the cross validation vectors~$\Bm E_{F\!}$ and $\Bm E_G$.  Using expression~\ref[EkWk], they can be written as
+The first thing to notice is that both expression share the term~$P_{X^{(k)\!}}^2(x_k)$, because we are keeping the data sites~$X$ fixed and are changing only the data values from $F$ to~$G$.  Looking at the numerator, we have the elements of the cross validation vectors~$\Bm E_{F\!}$ and $\Bm E_G$.  Using expression~\ref[EkWk], they can be written as
 $$
 (f_k-s_F^{(k)\!}(x_k))^2 = (E_F)_k = \sum_{j=1}^N f_j\.{C_{k,j}\over C_{k,k}},\qquad
 (g_k-s_G^{(k)\!}(x_k))^2 = (E_G)_k = \sum_{j=1}^N g_j\.{C_{k,j}\over C_{k,k}}.
@@ -127,31 +127,39 @@ We'll come back to it later.
 
 The other difference in the expressions for $(Q_F)_k$ and $(Q_G)_k$ is in the terms $\norm{s_F}_\phi^2$ and~$\norm{s_G}_\phi^2$ at the denominators.  Their expressions are
 $$
-\norm{s_F}_\phi^2 = \Bm f^{\,\.T\!}\Bm C\, \Bm f\qquad\hbox{and}\qquad\norm{s_G}_\phi^2 = (\,\Bm f +η\.\Bm 1)^{T\!}\Bm C\,(\,\Bm f +η\.\Bm 1), 
+\norm{s_F}_\phi^2 = \Bm f^{\,\.T\!\!}\Bm C\, \Bm f\qquad\hbox{and}\qquad\norm{s_G}_\phi^2 = (\,\Bm f +η\.\Bm 1)^{T\!}\Bm C\,(\,\Bm f +η\.\Bm 1), 
 $$
 with $\Bm f \coloneq (\range f_N/)^{T\!}$ and~$\Bm 1\!\.\coloneq(1,1,\dots 1)^{T\!}.$
 By using the Laurent series expansion~\ref[laurentC] of~$\Bm C$, in the flat limit their quotient becomes
 $$
 \eqalign{
 \lim_{ε\to 0}{\norm{s_F}_\phi^2\over \norm{s_G}_\phi^2} &=
-\lim_{ε\to 0}{\Bm f^{\,\.T\!}\.\Bm C\, \Bm f\over (\,\Bm f +η\.\Bm 1)^{T\!}\Bm C\,(\,\Bm f +η\.\Bm 1)} =
+\lim_{ε\to 0}{\Bm f^{\,\.T\!\!}\.\Bm C\, \Bm f\over (\,\Bm f +η\.\Bm 1)^{T\!}\Bm C\,(\,\Bm f +η\.\Bm 1)} =
 \lim_{ε\to 0}{\Bm f^{\,\.T\!}\CC_{\!\!\Bm{--p}}\, \Bm f\over (\,\Bm f +η\.\Bm 1)^{T}\CC_{\!\!\Bm{--p}\!}\,(\,\Bm f +η\.\Bm 1)} \cr
 &= \lim_{ε\to 0}{\Bm f^{\,\.T\!}\CC_{\!\!\Bm{--p}}\, \Bm f\over
 \Bm f^{\,\.T\!}\CC_{\!\!\Bm{--p}}\, \Bm f + η\.\Bm 1^{\!T\!}\,\CC_{\!\!\Bm{--p}}\,\.\Bm f + η\,\Bm f^{\,\.T\!}\CC_{\!\!\Bm{--p}} \.\Bm 1 + η^2\.\Bm 1^{\!T\!}\.\CC_{\!\!\Bm{--p}}\.\Bm 1}
 }
 $$
 
-If we show that~$\CC_{\!\!\Bm{--p}} \.\Bm 1 = \Bm 1^{\!T\!}\.\CC_{\!\!\Bm{--p}\!} = \Bm 0$, then this limit is~$1$ and expression~\ref[differenceterm] is equal to~$0$. Then it follows that~$\lim_{ε\to 0} \Bm Q_{\.G\!} = \lim_{ε\to 0} \Bm Q_{\.F}$.  The fact that the sum of the rows and the columns of the matrix~$\CC_{\!\!\Bm{--p}}$ is zero can be shown by expanding $\Bm A$ and~$\Bm C$ using the power series~\ref[powerA] and the Laurent series~\ref[laurentC]. In fact, the multiplication of $\Bm A$ by~$\Bm C$ yields
+If we show that~$\CC_{\!\!\Bm{--p}} \.\Bm 1 = \Bm 1^{\!T\!}\.\CC_{\!\!\Bm{--p}\!} = \Bm 0$, then this limit is~$1$ and, moreover, expression~\ref[differenceterm] assumes the value~$0$. Then it follows that~$\lim_{ε\to 0} \Bm Q_{\.G\!} = \lim_{ε\to 0} \Bm Q_{\.F}$, as we wanted to show.  The fact that the sum of each row and of each column of the matrix~$\CC_{\!\!\Bm{--p}}$ is zero can be shown by expanding $\Bm A$ and~$\Bm C$ respectively into the power series~\ref[powerA] and the Laurent series~\ref[laurentC]. In fact, the multiplication of $\Bm A$ by~$\Bm C$ yields
 $$
 \displaylines{
+\Bm{AC}= \Bm I \cr
 (\CA_{\Bm 0} + \CA_{\Bm 1}\,ε + \CA_{\Bm 2}\,ε^2+\dots)(\CC_{\!\!\Bm{--p}}\,ε^{-p} + \CC_{\!\!\Bm{--p+}\Bm 1}\,ε^{-p+1} + \CC_{\!\!\Bm{--p+}\Bm 2}\,ε^{-p+2} + \dots) = \Bm I\cr
-(\CA_{\Bm 0}\CC_{\!\!\Bm{--p}})\,ε^{-p} + (\CA_{\Bm 0} \CC_{\!\!\Bm{--p+}\Bm 1} + \CA_{\Bm 1}\CC_{\!\!\Bm{--p+}\Bm 1})\,ε^{-p+1} + \dots = \Bm I. 
+(\CA_{\Bm 0}\CC_{\!\!\Bm{--p}})\,ε^{-p} + (\CA_{\Bm 0} \CC_{\!\!\Bm{--p+}\Bm 1} + \CA_{\Bm 1}\CC_{\!\!\Bm{--p}})\,ε^{-p+1} + \dots = \Bm I. 
 }
 $$
-In this equation if we multiply both terms by~$ε^{-p}$ and then take the limit~$ε\to0$ we obtain
+In this equation, if we multiply both terms by~$ε^{-p\!}$ and then take the limit~$ε\to0$, we obtain
 $$
-\CA_{\Bm 0}\CC_{\!\!\Bm{--p}}= \Bm 0.
+\CA_{\Bm 0}\CC_{\!\!\Bm{--p}}= \Bm 0,
 $$
+where on the right side there is the zero matrix. On the left side, the matrix~$\CA_{\Bm 0}$ is the matrix with all entries equal to~$\phi(0)$.  It is then possible to rewrite the equation as
+$$
+\phi(0)\,\Bm 1\,\Bm 1^{\!T}\CC_{\!\!\Bm{--p}} = \Bm 0.
+$$
+Clearly, since $\phi(0)\neq 0$, this relation can hold only if~$\Bm 1^{\!T}\CC_{\!\!\Bm{--p}}$ is the zero vector. The fact that also $\CC_{\!\!\Bm{--p}}\,\Bm 1$ has to be zero vector is due to the symmetry of the matrix~$\Bm C$ and hence of the coefficient matrix~$\CC_{\!\!\Bm{--p}}$ of its Laurent series.
+
+The proof has not been completed yet, because it remains to see what happens when $F$ is constant (meaning that $f_i=f_j$ for each pair of indices~$i,j$), in which case also $G$ is constant. If $F$ (or~$G$) is constantly equal to~$0$, then $\Bm Q_{\.F\!}$ (or~$\Bm Q_{\.G}$) is the zero vector by its definition (Definition~\ref[Qdef]). Otherwise, when the constant is different from~$0$, the vector $\Bm Q_{\.F\!}$ (or~$\Bm Q_{\.G}$)  is again the zero vector because, for each~$k$, the numerator~$(E_F)_k$ of the element~$(Q_F)_k$ (or the numerator~$(E_G)_k$ of the element~$(Q_G)_k$) when~$\varepsilon\to0$ becomes just like expression~\ref[differenceterm], which has value~$0$.~\QED
 \postskip
 
 \Red
@@ -172,3 +180,4 @@ $\sum Q \to 0$ if $f\in \Cal N_\phi$.  Otherwise...
 \postskip
 
 \Black
+
