--- a/thesis.tex
+++ b/thesis.tex
@@ -18,8 +18,8 @@
 
 \font\symbols=Diamond % MonotypeSorts
 \def\QED{\hbox{\symbols\resizethefont \,❖}}
-\famvardef\bm{\EBGaramond\semibold\bi}
-\famvardef\bmu{\EBGaramond\semibold\bf}
+\famvardef\bm{\EBGaramond\setff{-liga; -kern}\semibold\bi}
+\famvardef\bmu{\EBGaramond\setff{-liga; -kern}\semibold\bf}
 \famvardef\tt{\TypewriterMT\setff{-liga; -tlig; embolden=1.1}\typoscale[870/]\rm}
 
 
