--- a/thesis.tex
+++ b/thesis.tex
@@ -76,13 +76,13 @@
 \sec[buildingsec] Building a regularity classifier
 \input building-a-regularity-classifier
 
-\sec Properties of the classifier
-\input properties-of-the-classifier
+\sec Invariance of the regularity vector
+\input invariance-of-the-regularity-vector
 
-\sec Examples
+\sec Numerical examples
 
 
-\chap ???
+\chap Dealing with two-dimensional discontinuities
 
 \sec Edge detection ???
 
