--- a/error-estimates.tex
+++ b/error-estimates.tex
@@ -118,6 +118,7 @@ The power function therefore is a function which depends only on the kernel and 
 \topinsert
 \kern-.3cm
 \bgroup
+\EBGaramond\rm
 \typoscale[900/900]
 \picw=1.2\hsize
 \line{\hss\inkinspic{power2.pdf}\hbox{\kern1.5em}\hss}
