--- a/biblist.bib
+++ b/biblist.bib
@@ -27,7 +27,7 @@ journal = {Advances in Computational Mathematics}
 
 
 @book{fasshauer_2007,
-author = {Fasshauer, Gregory F},
+author = {Fasshauer, Gregory F.},
 title = {Meshfree Approximation Methods with MATLAB},
 year = {2007},
 publisher = {World Scientific Publishing Co., Inc.},
@@ -85,7 +85,7 @@ doi = {10.1016/j.cam.2011.05.021}
 
 
 @article{fornberg-wright_2004,
-author = {Fornberg, B. and GB, Wright},
+author = {Fornberg, Bengt and GB, Wright},
 year = {2004},
 month = {09},
 pages = {853--867},
@@ -121,7 +121,7 @@ doi = {10.1023/A:1018975909870}
 
 
 @article{fasshauer_2011,
-author = {Fasshauer, Gregory},
+author = {Fasshauer, Gregory F.},
 year = {2011},
 month = {01},
 title = {Positive Definite Kernels: Past, Present and Future},
