--- a/invariance-of-the-regularity-vector.tex
+++ b/invariance-of-the-regularity-vector.tex
@@ -217,14 +217,14 @@ Summing up, we saw that when $ε→0$ the regularity vector~$\Bm Q$ converges to
 \topinsert
 \kern-.9cm
 \bgroup
-\EBGaramond\rm
 \typoscale[900/900]
 \picw=1.2\hsize
 \line{\hss\inkinspic{shape.pdf}\hbox{\kern1.5em}\hss}
 \egroup
-\kern-5ex
+\kern-6ex
 \caption/f
 Three similar sets of data~$(X, F)$, with $X\subset\R$.  Intuitively they all have the same regularity, whatever this means.  Indeed, we showed that in the flat limit the regularity vector~$\Bm Q$ is the same for all of them.
+\bigskip
 \endinsert
 
 
