--- a/thesis-mac.tex
+++ b/thesis-mac.tex
@@ -24,7 +24,7 @@
 \def\proof{\smallskip\noindent{\em PROOF}. \,}
 
 \def\preskip{\smallskip}
-\def\postskip{\medskip\medskip}
+\def\postskip{\medskip\smallskip}
 
 \long\def\comment#1\endcomment{}
 
