--- a/thesis.tex
+++ b/thesis.tex
@@ -93,7 +93,7 @@
 \input invariance-of-the-regularity-vector
 
 \sec Numerical examples
-
+\input numerical-examples
 
 \chap Dealing with discontinuities
 % two-dimensional discontinuities
