--- a/thesis.tex
+++ b/thesis.tex
@@ -62,7 +62,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chap Kernel-based interpolation
 
-\sec The interpolation problem
+\def\sectitle{The interpolation problem}
+\ea\sec\sectitle
+
 \input the-interpolation-problem
 
 \sec[positivesec] Positive definite functions
