--- a/biblist.bib
+++ b/biblist.bib
@@ -167,3 +167,24 @@ issn = {0021-9991},
 doi = {https://doi.org/10.1016/j.jcp.2015.07.006},
 author = {Pedro Gonzalez-Rodriguez and Miguel Moscoso and Manuel Kindelan}
 }
+
+
+@article{fornberg-flyer_2012,
+author = {Fornberg, Bengt and Flyer, Natasha},
+year = {2012},
+month = {03},
+title = {The Gibbs Phenomenon for Radial Basis Functions}
+}
+
+
+@article{jae_hun_2007,
+title = {A note on the Gibbs phenomenon with multiquadric radial basis functions},
+journal = {Applied Numerical Mathematics},
+volume = {57},
+number = {2},
+pages = {213-229},
+year = {2007},
+issn = {0168-9274},
+doi = {https://doi.org/10.1016/j.apnum.2006.02.006},
+author = {Jae-Hun Jung}
+}
