--- a/numerical-examples.tex
+++ b/numerical-examples.tex
@@ -1,12 +1,16 @@
 
 \Red
 
+\noindent TODO
 \begitems
 * How to numerically compute Q, $\varepsilon$ doesn't have to be too small.
-* Comparison with $\Bm E$ and~$\Bm\alpha$.
+* Comparison with $\Bm E$ and~$\Bm\alpha$ (and simply the native space norm).
 * Different $\phi$ detect different regularities.
-* Properties of the quantity~$\norm{\Bm Q}_1$.
+* Properties of the quantity~$\norm{\Bm Q}_1$, used to build the classifier.
+* ``Problems'' at the boundary and possible solutions.
 \enditems
+
+
 
 \Black
 
