--- a/first-page.tex
+++ b/first-page.tex
@@ -1,13 +1,46 @@
 
 \null
-\vskip2in
+\vskip-2cm
+\bgroup
+\vsize=8.3in
+\typosize[17/]
+\centerline{UNIVERSITÀ DEGLI STUDI DI MILANO-BICOCCA}
+\vskip.5cm
+\hbox to\hsize{\kern0.37in{\leaders\hrule height 1.07pt\hss}\kern0.37in}
+\vskip.5cm
+\scalemain\typoscale[1000/1000]
+\centerline{\rm DIPARTIMENTO DI MATEMATICA E APPLICAZIONI}
+\vskip 10pt
+\centerline{\rm Corso di Laurea Magistrale in \bf Matematica}
+
+\vfill
 \bgroup
   \leftskip=0pt plus 1fill
   \rightskip=0pt plus 1fill
-  \parfillskip=0pt
+  \parfillskip=0pt \parindent=0pt
   \_titfont
   On the Problem of Recovering\nl
-  Discontinuous Functions\nl
-  from Scattered Data\par
+  \hbox{$\.$}Discontinuous Functions\nl
+  \hbox{$\.$}from Scattered Data\par
 \egroup
 
+\vfill
+\line{\it Candidate:\hfil Advisor:\/}%
+  \medskip
+\line{%
+    \def\\{\unskip\break\ignorespaces}%
+    \parindent=0pt
+    \parfillskip=0pt
+    \vtop{\rightskip=0pt plus 1fill \uppercase{Matteo Caoduro}}%
+    \hss
+    \vtop{\leftskip=0pt plus 1fill Prof.ssa \uppercase{Milvia\\ Francesca Rossini}}%
+}%
+
+\vfill
+\hbox to\hsize{\kern0.37in{\leaders\hrule height 1.07pt\hss}\kern0.37in}
+\vskip10pt
+\centerline{\typosize[14/]\rm ANNO ACCADEMICO 2019--2020}%
+  \vskip5pt
+  \centerline{\typosize[14/]\rm SESSIONE III}%
+\eject
+\egroup
