--- a/biblist.bib
+++ b/biblist.bib
@@ -1,3 +1,4 @@
+
 % TODO: Years should be typeset using onum
 
 
@@ -17,6 +18,7 @@ title = {Reconstruction of multivariate functions from scattered data},
 author = {Schaback, Robert},
 year = {1997}
 }
+
 
 @article{shaback_2006,
 author = {Schaback, Robert and  Werner, J.},
@@ -68,7 +70,7 @@ pages = {155--161},
 title = {Stability of kernel-based interpolation},
 volume = {32},
 journal = {Adv. Comput. Math.},
-doi = {10.1007/s10444-008-9093-4}
+%doi = {10.1007/s10444-008-9093-4}
 }
 
 
@@ -80,7 +82,7 @@ pages = {575--588},
 title = {Bases for kernel-based spaces},
 volume = {236},
 journal = {J. Computational Applied Mathematics},
-doi = {10.1016/j.cam.2011.05.021}
+%doi = {10.1016/j.cam.2011.05.021}
 }
 
 
@@ -92,7 +94,7 @@ pages = {853--867},
 title = {Stable computation of multiquadric interpolants for all values of the shape parameter},
 volume = {48},
 journal = {Computers \& Mathematics with Applications},
-doi = {10.1016/j.camwa.2003.08.010}
+%doi = {10.1016/j.camwa.2003.08.010}
 }
 
 
@@ -104,7 +106,7 @@ pages = {869--892},
 title = {Stable Computations with Gaussian Radial Basis Functions},
 volume = {33},
 journal = {SIAM J. Scientific Computing},
-doi = {10.1137/09076756X}
+%doi = {10.1137/09076756X}
 }
 
 
@@ -116,7 +118,7 @@ pages = {193--210},
 title = {An algorithm for selecting a good parameter~$c$ in radial basis function interpolation},
 volume = {11},
 journal = {Advances in Computational Mathematics},
-doi = {10.1023/A:1018975909870}
+%doi = {10.1023/A:1018975909870}
 }
 
 
@@ -137,7 +139,7 @@ journal = {Applied Mathematics and Computation},
 volume = {307},
 pages = {113--123},
 year = {2017},
-doi = {/10.1016/j.amc.2017.02.043},
+%doi = {/10.1016/j.amc.2017.02.043},
 author = {Licia Lenarduzzi and Robert Schaback}
 }
 
@@ -150,8 +152,8 @@ volume = {4},
 number = {4},
 pages = {329-340},
 year = {1971},
-issn = {0024-3795},
-doi = {https://doi.org/10.1016/0024-3795(71)90004-8},
+%issn = {0024-3795},
+%doi = {https://doi.org/10.1016/0024-3795(71)90004-8},
 author = {C.E. Langenhop}
 }
 
@@ -163,8 +165,8 @@ journal = {Journal of Computational Physics},
 volume = {299},
 pages = {307-319},
 year = {2015},
-issn = {0021-9991},
-doi = {https://doi.org/10.1016/j.jcp.2015.07.006},
+%issn = {0021-9991},
+%doi = {https://doi.org/10.1016/j.jcp.2015.07.006},
 author = {Pedro Gonzalez-Rodriguez and Miguel Moscoso and Manuel Kindelan}
 }
 
@@ -184,7 +186,51 @@ volume = {57},
 number = {2},
 pages = {213-229},
 year = {2007},
-issn = {0168-9274},
-doi = {https://doi.org/10.1016/j.apnum.2006.02.006},
+%issn = {0168-9274},
+%doi = {https://doi.org/10.1016/j.apnum.2006.02.006},
 author = {Jae-Hun Jung}
+}
+
+
+
+@article{bentley_1975,
+author = {Bentley, Jon Louis},
+title = {Multidimensional Binary Search Trees Used for Associative Searching},
+year = {1975},
+issue_date = {Sept. 1975},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {18},
+number = {9},
+%issn = {0001-0782},
+%doi = {10.1145/361002.361007},
+journal = {Commun. ACM},
+month = sep,
+pages = {509–517},
+numpages = {9}
+}
+
+
+
+@book{aurenhammer-klein-lee_2013,
+author = {Aurenhammer, Franz and Klein, Rolf and Lee, Der-Tsai},
+title = {Voronoi Diagrams and Delaunay Triangulations},
+year = {2013},
+%isbn = {9789814447638},
+publisher = {World Scientific Publishing Co., Inc.},
+address = {USA},
+edition = {1st}
+}
+
+
+
+@article{schaback_1997b,
+author = {Schaback, Robert},
+year = {1997},
+month = {03},
+%pages = {},
+title = {Error Estimates and Condition Numbers for Radial Basis Function Interpolation},
+volume = {3},
+journal = {Advances in Computational Mathematics},
+%doi = {10.1007/BF02432002}
 }
