--- a/numerical-examples.tex
+++ b/numerical-examples.tex
@@ -8,6 +8,7 @@
 * Different $\phi$ detect different regularities.
 * Properties of the quantity~$\norm{\Bm Q}_1$, used to build the classifier.
 * ``Problems'' at the boundary and possible solutions.
+* Effect of noise in the data
 \enditems
 
 
